// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserPage component render user info 1`] = `
<div
  class="container"
>
  <a
    class="btn btn-primary btn-lg btn-block mt-4 font-weight-bold"
    href="/"
  >
    На Главную
  </a>
  <div
    class="row d-flex flex-nowrap justify-content-around  align-items-start align-content-startmt-5 pt-3 px-3 my-4 text-white bg-primary rounded"
  >
    <div
      class="d-flex col-5 align-self-center flex-wrap align-items-start align-content-start"
    >
      <div
        class="d-flex w-100 p-3 mb-3 bg-light rounded shadow text-dark font-weight-bold"
      >
        <p
          class="w-100 m-0"
          style="font-size:18px"
        >
          Репозитории: 
        </p>
        <p
          class="w-100 m-0 text-right"
        >
          0
        </p>
      </div>
      <div
        class="d-flex w-100 p-3 mb-3 bg-light rounded shadow text-dark font-weight-bold"
      >
        <p
          class="w-100 m-0"
          style="font-size:18px"
        >
          Gists: 
        </p>
        <p
          class="w-100 m-0 text-right"
        >
          0
        </p>
      </div>
      <div
        class="d-flex w-100 p-3 mb-3 bg-light rounded shadow text-dark font-weight-bold"
      >
        <p
          class="w-100 m-0"
          style="font-size:18px"
        >
          Подписчики: 
        </p>
        <p
          class="w-100 m-0 text-right"
        >
          0
        </p>
      </div>
      <div
        class="d-flex w-100 p-3 mb-3 bg-light rounded shadow text-dark font-weight-bold"
      >
        <p
          class="w-100 m-0"
          style="font-size:18px"
        >
          Подписан: 
        </p>
        <p
          class="w-100 m-0 text-right"
        >
          0
        </p>
      </div>
    </div>
    <div
      class="card col-5 px-0 mb-3"
      style="width:18rem"
    >
      <a
        href="https://github.com/"
      >
        <img
          alt="userAvatar"
          class="card-img-top"
          src=""
        />
      </a>
      <div
        class="card-body px-3 py-2"
      >
        <div
          class="text-center mt-3"
        >
          <a
            class="btn btn-primary"
            href="https://github.com/"
            target="new_blank"
          >
            Смотреть на GitHub
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="row py-4 bg-primary rounded"
  >
    <div
      class="container"
    >
      <div
        class="d-flex flex-wrap justify-content-around"
      >
        <p
          class="w-100 font-weight-bold text-white text-center"
          style="font-size:20px"
        >
          Список репозиториев
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserPage component render with error message 1`] = `
<div
  class="container"
>
  <a
    class="btn btn-primary btn-lg btn-block mt-4 font-weight-bold"
    href="/"
  >
    На Главную
  </a>
  <div
    class="d-flex"
  >
    <p
      class="w-100 text-center text-danger font-weight-bold"
      style="line-height:80vh;font-size:26px"
    >
      wrong user
    </p>
  </div>
  <div
    class="row py-4 bg-primary rounded"
  >
    <div
      class="container"
    >
      <div
        class="d-flex flex-wrap justify-content-around"
      >
        <p
          class="w-100 font-weight-bold text-white text-center"
          style="font-size:20px"
        >
          Список репозиториев
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserPage component render without data and without errorMessage 1`] = `
<div
  class="container"
>
  <a
    class="btn btn-primary btn-lg btn-block mt-4 font-weight-bold"
    href="/"
  >
    На Главную
  </a>
  <div
    class="row py-4 bg-primary rounded"
  >
    <div
      class="container"
    >
      <div
        class="d-flex flex-wrap justify-content-around"
      >
        <p
          class="w-100 font-weight-bold text-white text-center"
          style="font-size:20px"
        >
          Список репозиториев
        </p>
      </div>
    </div>
  </div>
</div>
`;
